--- a/appMy/templates/index.html
+++ b/appMy/templates/index.html
@@ -13,7 +13,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Business Consultancy</h5>
-                            <h1 class="display-1 text-white mb-md-4">We Provide Solution On Your Business</h1>
+                            <h1 class="display-1 text-white mb-md-4">Deneme 123</h1>
                             <a href="#quote" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
                             <a href="{% url 'Contact' %}" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
